# pensieve

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  env.local.example  env.production.example  justfile  prometheus-local.yml
.cursor/rules/: pensieve.mdc
.github/workflows/: ci.yml
crates/pensieve-core/: Cargo.toml  build.rs
crates/pensieve-core/src/: error.rs  event.rs  lib.rs  metrics.rs  proto.rs
crates/pensieve-ingest/: Cargo.toml
crates/pensieve-ingest/src/: clickhouse.rs  dedupe.rs  error.rs  lib.rs  logging.rs  main.rs  segment.rs
crates/pensieve-ingest/src/pipeline/: clickhouse.rs  coverage.rs  dedupe.rs  mod.rs  segment.rs
crates/pensieve-ingest/src/relay/: catalog.rs  connection_guard.rs  manager.rs  mod.rs  schema.rs  scoring.rs  url.rs
crates/pensieve-ingest/src/source/: jsonl.rs  mod.rs  proto.rs  relay.rs
crates/pensieve-ingest/src/sync/: mod.rs  negentropy.rs  state.rs
crates/pensieve-preview/: Cargo.toml
crates/pensieve-preview/src/: config.rs  error.rs  lib.rs  main.rs  query.rs  resolve.rs  state.rs
crates/pensieve-preview/src/render/: article.rs  components.rs  content.rs  generic.rs  mod.rs  note.rs  profile.rs  repost.rs  video.rs
crates/pensieve-preview/src/routes/: health.rs  home.rs  json.rs  llms.rs  mod.rs  og.rs  preview.rs
crates/pensieve-serve/: Cargo.toml  README.md
crates/pensieve-serve/src/: auth.rs  cache.rs  error.rs  lib.rs  main.rs  state.rs
crates/pensieve-serve/src/routes/: health.rs  kinds.rs  mod.rs  relays.rs  stats.rs
docs/: baseline-2026-03-04-phase0-api-cache-log.txt  baseline-2026-03-04-phase0-system-query-stats.txt  clickhouse_self_hosted.sql  ingestion_pipeline.md  migration-plan.md  negentropy_sync.md  open_questions.md  stability_fixes_plan.md
docs/migrations/: 001_active_user_views.sql  002_pubkey_first_seen.sql  003_zap_amounts.sql  004_active_users_materialized.sql  005_fix_active_users_views.sql  006_preaggregate_active_users.sql  007_filter_future_dates_in_views.sql  008_fix_active_users_aggregation.sql  009_fix_zap_amounts.sql  010_fix_pubkey_first_seen_dates.sql  011_new_users_summary.sql  012_cohort_retention_summary.sql  013_schema_optimizations.sql  014_relay_distribution.sql  015_kinds_stats.sql  README.md
ops/: RUNBOOK.md
ops/production/: compose.yml
ops/production/caddy/: Caddyfile
ops/production/clickhouse/: config.xml
ops/systemd/: archive-sync.service  archive-sync.timer  pensieve-api.service  pensieve-ingest.service  pensieve-preview.service  pensieve.service
pensieve-deploy/: .gitignore  .vip.example  README.md  docker-compose.yml  env.example
pensieve-deploy/caddy/: Caddyfile
pensieve-deploy/clickhouse/: config.xml  users.xml
pensieve-deploy/grafana/provisioning/dashboards/: dashboards.yml  ingestion.json
pensieve-deploy/grafana/provisioning/dashboards/json/: pensieve-backfill.json  pensieve-ingestion.json  pensieve-user-analytics.json
pensieve-deploy/grafana/provisioning/datasources/: datasources.yml
pensieve-deploy/prometheus/: prometheus.yml
pensieve-deploy/scripts/: ch-migrate.sh  deploy.sh  sync-archive.sh
pensieve-deploy/systemd/: archive-sync.service  archive-sync.timer  pensieve-api.service  pensieve-ingest.service  pensieve-preview.service  pensieve.service
pensieve-local/: README.md  docker-compose.yml  prometheus.yml
pensieve-local/clickhouse/: config.xml  users.xml
pensieve-local/grafana/dashboards/: backfill.json  ingestion.json  user_analytics.json
pensieve-local/grafana/provisioning/dashboards/: default.yml
pensieve-local/grafana/provisioning/datasources/: clickhouse.yml  prometheus.yml  sqlite.yml
pensieve-local/scripts/: ch-migrate.sh
scripts/: caching-baseline.sh
