[package]
name = "pensieve-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Nostr protocol types and crypto
nostr.workspace = true
notepack.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Protobuf
prost.workspace = true

# Error handling
thiserror.workspace = true

# Observability
tracing.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# HTTP server (for metrics endpoint)
axum.workspace = true
tokio.workspace = true

[build-dependencies]
prost-build = "0.13"
