[package]
name = "pensieve-serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
pensieve-core = { path = "../pensieve-core" }

# Async runtime
tokio.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# ClickHouse
clickhouse.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# SQLite for relay stats
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Environment
dotenvy = "0.15"

# Caching
moka = { version = "0.12", features = ["future"] }
